--- a/changelog.txt
+++ b/changelog.txt
@@ -1,1 +1,1 @@
-fixed - Fixes the issue that email link sign in not properly released to CDN and NPM.
+fixed - Fixes the issue that email link sign in is not properly released to CDN and NPM.
