--- a/packages/translations/package.json
+++ b/packages/translations/package.json
@@ -24,14 +24,15 @@
     "lint": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.ts\"",
     "clean": "rimraf dist",
-    "test": "echo \"No tests specified\" && exit 0",
-    "test:watch": "echo \"No tests specified\" && exit 0",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "publish:tags": "sh -c 'TAG=\"${npm_package_name}@${npm_package_version}\"; git tag --list \"$TAG\" | grep . || git tag \"$TAG\"; git push origin \"$TAG\"'",
     "release": "npm run build && pnpm pack --pack-destination ../../releases/"
   },
   "devDependencies": {
     "prettier": "catalog:",
     "rimraf": "catalog:",
+    "vitest": "catalog:",
     "tsup": "catalog:",
     "typescript": "catalog:"
   }
