refactor(*): Align packages with translation changes

--- a/packages/translations/tsconfig.json
+++ b/packages/translations/tsconfig.json
@@ -19,7 +19,7 @@
     "alwaysStrict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "exactOptionalPropertyTypes": true,
+    "exactOptionalPropertyTypes": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
